Quick fix for the application center, there was an extra unexpected item overflow that needed to be removed.

--- a/copl/com.elster.jupiter.theme.skyline/src/main/web/js/skyline/sass/src/container/AppCenter.scss
+++ b/copl/com.elster.jupiter.theme.skyline/src/main/web/js/skyline/sass/src/container/AppCenter.scss
@@ -39,7 +39,7 @@
     }
 
     .uni-nav-appcenter-dataview {
-        margin-right: -5px !important;
+        margin-right: -1px !important;
         left: 0 !important;
 
         .handlebar {
